--- a/config.json
+++ b/config.json
@@ -1,100 +1,455 @@
 {
-  "DEFAULTS": {
-    "allow_domains": [
-      "thebell.co.kr",
-      "www.thebell.co.kr",
-      "n.news.naver.com",
-      "m.news.naver.com",
-      "news.nate.com",
-      "biz.chosun.com",
-      "www.hankyung.com",
-      "www.mk.co.kr",
-      "www.sedaily.com",
-      "www.fnnews.com",
-      "www.edaily.co.kr",
-      "www.etoday.co.kr",
-      "www.etnews.com",
-      "www.hankookilbo.com"
+  "EXCLUDE_TITLE_KEYWORDS": [
+    "야구", "축구", "배구", "농구", "골프", "e스포츠", "올림픽", "월드컵", "K리그", "프로야구", "프로축구", "프로배구", "프로농구", "유도", "꿈나무", "올림픽", "탁구",
+    "부고", "부음", "인사", "승진", "임명", "발령", "인사발령", "인사이동",
+    "브랜드평판", "브랜드 평판", "브랜드 순위", "브랜드지수", "브랜드", "페스타", "페스티벌", "할인 행사", "서울거리", "폴리스라인", "상금", "경진대회",
+    "코스피", "코스닥", "주가", "주식", "증시", "시세", "마감", "장중", "장마감", "거래량", "거래대금", "상한가", "하한가",
+    "봉사", "후원", "기부", "우승", "무승부", "패배", "스포츠", "스폰서", "지속가능", "ESG", "위촉", "이벤트", "사전예약", "챔프전",
+    "프로모션", "연극", "공연", "어르신", "링컨", "에비에이터", "NH퍼플통장", "골라담기", "태극기", "공채", "메디컬테스트", "V리그", "김연경", "레베카",
+    "음악회", "교향악단", "사이버대", "신진서", "안성준", "GS칼텍스배", "프로기전", "다문화", "와인25플러스", "과채주스", "책Dream", "책드림", "트로페오",
+    "브랜드데이", "쇼핑라이브", "산학협력 컨퍼런스", "녹색상품", "소비자가 뽑은", "캠페인", "나눔", "챔피언십", "사회공헌", "성금", "캠프",
+    "테니스", "집중호우", "수해 복구", "온열질환", "출시", "금융교육", "유튜브 구독자", "김장", "취약계층", "할인행사", "안성재", "에너지음료", "문화교류"
+  ],
+  "ALLOWED_SOURCES": [
+    "news.einfomax.co.kr", "yna.co.kr", "newsis.com", "mk.co.kr", "news1.kr", "mt.co.kr", "hankyung.com",
+    "joongang.co.kr", "chosun.com", "edaily.co.kr", "biz.heraldcorp.com", "kmib.co.kr", "seoul.co.kr",
+    "thebell.co.kr", "fnnews.com", "ichannela.com", "donga.com", "hani.co.kr", "news.jtbc.co.kr",
+    "khan.co.kr", "imnews.imbc.com", "mbn.co.kr", "news.sbs.co.kr", "tvchosun.com", "ytn.co.kr",
+    "biz.chosun.com", "media.naver.com", "ohmynews.com", "ajunews.com", "sedaily.com", "asiae.co.kr",
+    "hankookilbo.com", "nocutnews.co.kr", "bloter.net", "segye.com", "bizwatch.co.kr", "newsprime.co.kr",
+    "meconomynews.com", "newsway.co.kr"
+  ],
+  "favorite_categories": {
+    "국/공채": [],
+    "공공기관": [],
+    "보험사": ["현대해상", "농협생명", "메리츠화재", "교보생명", "삼성화재", "삼성생명", "신한라이프", "흥국생명", "동양생명", "미래에셋생명"],
+    "5대금융지주": ["신한지주", "하나금융", "KB금융", "농협금융", "우리금융"],
+    "5대시중은행": ["농협은행", "국민은행", "신한은행", "우리은행", "하나은행"],
+    "카드사": ["KB국민카드", "현대카드", "신한카드", "BC카드", "삼성카드"],
+    "캐피탈": ["한국캐피탈", "현대캐피탈"],
+    "지주사": ["한국투자금융지주", "SK이노베이션", "GS에너지", "SK", "GS"],
+    "에너지": ["SK가스", "GS칼텍스", "S-Oil", "SK에너지", "코리아에너지터미널"],
+    "발전": ["GS파워", "GSEPS", "삼천리"],
+    "자동차": ["LG에너지솔루션", "한온시스템", "포스코퓨처엠", "한국타이어"],
+    "전기/전자": ["SK하이닉스", "LG이노텍", "LG전자", "LS일렉트릭"],
+    "소비재": ["이마트", "LF", "CJ제일제당", "SK네트웍스", "CJ대한통운"],
+    "비철/철강": ["포스코", "현대제철", "고려아연"],
+    "석유화학": ["LG화학", "SK지오센트릭"],
+    "건설": [],
+    "특수채": ["주택도시보증공사", "기업은행"]
+  },
+  "excel_company_categories": {
+    "국/공채": [],
+    "공공기관": [],
+    "보험사": [
+      "현대해상화재보험(후)", "농협생명보험(후)", "메리츠화재해상보험(후)", "교보생명(후)",
+      "삼성화재", "삼성생명", "신한라이프(후)", "흥국생명보험(후)", "동양생명보험(후)", "미래에셋생명(후)"
     ],
-    "deny_domains": [
-      "entertain.",
-      "sports.",
-      "m.entertain",
-      "m.sports"
+    "5대금융지주": [
+      "신한지주", "하나금융지주", "KB금융", "농협금융지주", "우리금융지주"
     ],
-    "include_keywords": [],
-    "exclude_keywords": [
-      "아이돌",
-      "연예",
-      "야구",
-      "축구"
+    "5대시중은행": [
+      "농협은행", "국민은행", "신한은행", "우리은행", "하나은행"
+    ],
+    "카드사": [
+      "케이비카드", "현대카드", "신한카드", "비씨카드", "삼성카드"
+    ],
+    "캐피탈": [
+      "한국캐피탈", "현대캐피탈"
+    ],
+    "지주사": [
+      "한국투자금융지주", "SK이노베이션", "지에스에너지", "SK", "GS"
+    ],
+    "에너지": [
+      "SK가스", "GS칼텍스", "S-Oil", "SK에너지", "코리아에너지터미널"
+    ],
+    "발전": [
+      "GS파워", "지에스이피에스", "삼천리"
+    ],
+    "자동차": [
+      "LG에너지솔루션", "한온시스템", "포스코퓨처엠", "한국타이어앤테크놀로지"
+    ],
+    "전기/전자": [
+      "SK하이닉스", "LG이노텍", "LG전자", "엘에스일렉트릭"
+    ],
+    "소비재": [
+      "이마트", "LF", "CJ제일제당", "SK네트웍스", "CJ대한통운"
+    ],
+    "비철/철강": [
+      "포스코", "현대제철", "고려아연"
+    ],
+    "석유화학": [
+      "LG화학", "SK지오센트릭"
+    ],
+    "건설": [],
+    "특수채": [
+      "주택도시보증공사", "기업은행"
     ]
   },
-  "ALT_INVEST": {
-    "lookback_hours": 24,
-    "max_per_keyword": 10,
-    "allow_domains": [],
-    "deny_domains": [],
-    "include_keywords": [],
-    "exclude_keywords": [
-      "팬미팅",
-      "화보",
-      "리뷰"
+  "synonym_map": {
+      "신한지주":[
+       "신한금융"
     ],
-    "keywords": {
-      "부동산": [
-        "부동산",
-        "오피스",
-        "물류센터",
-        "리츠",
-        "데이터센터",
-        "프롭테크"
-      ],
-      "인프라": [
-        "인프라",
-        "사회간접자본",
-        "민자사업",
-        "BTO",
-        "BTL",
-        "SOC"
-      ],
-      "에너지": [
-        "태양광",
-        "풍력",
-        "ESS",
-        "REC",
-        "RE100",
-        "PPA"
-      ],
-      "운송자산": [
-        "항공기 리스",
-        "선박금융",
-        "컨테이너선",
-        "벌크선"
-      ],
-      "인수금융": [
-        "인수금융",
-        "레버리지드론",
-        "LBO",
-        "프로젝트파이낸스"
-      ],
-      "대체펀드": [
-        "PEF",
-        "사모펀드",
-        "벤처펀드",
-        "세컨더리 펀드",
-        "컨티뉴에이션 펀드"
-      ]
-    },
-    "llm": {
-      "enable": true,
-      "model": "gpt-4o-mini",
-      "temperature": 0.2,
-      "top_p": 1.0,
-      "threshold": 0.68,
-      "system_prompt": "너는 보험사 자산운용 대체투자 심사 담당자다. 기사 제목/요약/본문을 바탕으로 대체투자 관점에서 실무적 중요도(0~1)를 평가하고, 핵심 키워드 3~6개를 태그로 제시해라. JSON으로만 답해라: {\"score\": 0.00, \"reason\": \"...\", \"tags\": [\"...\",\"...\"]}"
-    },
-    "show_domain_in_telegram": false,
-    "send_top_n": 0
+    "농협금융지주":[
+      "농협금융"
+    ],
+    "KB금융": [
+      "케이비금융"
+    ],
+    "KB국민카드": [
+      "케이비카드", "국민카드", "KB카드"
+    ],
+    "BC카드": [
+      "비씨카드"
+    ],
+    "한국투자금융지주": [
+      "한국금융지주"
+    ],
+    "SK이노베이션": [
+      "SK이노", "에스케이이노", "에스케이이노베이션"
+    ],
+    "GS에너지": [
+      "지에스에너지"
+    ],
+    "SK": [
+      "에스케이"
+    ],
+    "GS": [
+      "지에스"
+    ],
+    "S-Oil": [
+      "에스오일"
+    ],
+    "SK에너지": [
+      "에스케이에너지"
+    ],
+    "GS파워": [
+      "지에스파워"
+    ],
+    "GSEPS": [
+      "지에스이피에스"
+    ],
+    "LG에너지솔루션": [
+      "LG엔솔"
+    ],
+    "SK하이닉스": [
+      "에스케이하이닉스", "하이닉스"
+    ],
+    "LG이노텍": [
+      "엘지이노텍"
+    ],
+    "LG전자": [
+      "엘지전자"
+    ],
+    "LS일렉트릭": [
+      "엘에스일렉트릭"
+    ],
+    "LF": [
+      "엘에프"
+    ],
+    "CJ제일제당": [
+      "씨제이제일제당", "제일제당"
+    ],
+    "SK네트웍스": [
+      "에스케이네트웍스"
+    ],
+    "CJ대한통운": [
+      "씨제이대한통운", "대한통운"
+    ],
+    "LG화학": [
+      "엘지화학"
+    ],
+    "SK지오센트릭": [
+      "에스케이지오센트릭", "지오센트릭"
+    ],
+    "주택도시보증공사": [
+      "허그", "HUG"
+    ]
+      },
+"kiscd_map": {
+  "현대해상": "870102",
+  "농협생명": "H80828",
+  "메리츠화재": "870129",
+  "교보생명": "870200",
+  "삼성화재": "",
+  "삼성생명": "870021",
+  "신한라이프": "821446",
+  "흥국생명": "870153",
+  "동양생명": "821411",
+  "미래에셋생명": "821241",
+  "한국투자금융지주": "097600",
+  "신한지주": "177167",
+  "하나금융": "380557",
+  "KB금융": "C46308",
+  "농협금융": "H81975",
+  "우리금융": "JK6097",
+  "농협은행": "H80827",
+  "국민은행": "182744",
+  "신한은행": "840130",
+  "우리은행": "840149",
+  "하나은행": "821365",
+  "KB국민카드": "H00546",
+  "현대카드": "044292",
+  "신한카드": "812668",
+  "BC카드": "820512",
+  "삼성카드": "990345",
+  "한국캐피탈": "813362",
+  "현대캐피탈": "021637",
+  "SK이노베이션": "490896",
+  "GS에너지": "H79512",
+  "SK": "814261",
+  "GS": "243139",
+  "SK가스": "400122",
+  "GS칼텍스": "352705",
+  "S-Oil": "350940",
+  "SK에너지": "F39728",
+  "코리아에너지터미널": "L57897",
+  "GS파워": "145222",
+  "GSEPS": "103160",
+  "삼천리": "350010",
+  "LG에너지솔루션": "LZ0049",
+  "한온시스템": "386961",
+  "포스코퓨처엠": "520233",
+  "한국타이어": "I66472",
+  "SK하이닉스": "383511",
+  "LG이노텍": "380687",
+  "LG전자": "196275",
+  "LS일렉트릭": "388696",
+  "이마트": "H32072",
+  "LF": "479416",
+  "CJ제일제당": "494292",
+  "SK네트웍스": "610259",
+  "CJ대한통운": "710083",
+  "포스코": "OX9158",
+  "현대제철": "370142",
+  "고려아연": "370380",
+  "LG화학": "162209",
+  "SK지오센트릭": "F79581",
+  "주택도시보증공사": "041544",
+  "기업은행": "822167"
+  },
+"kr_COMP_CD_map": {
+    "현대해상": "801557",
+    "농협생명": "504085",
+    "메리츠화재": "801450",
+    "교보생명": "801405",
+    "삼성화재": "801503",
+    "삼성생명": "801480",
+    "신한라이프": "808161",
+    "흥국생명": "801560",
+    "동양생명": "808235",
+    "미래에셋생명": "801397",
+    "신한지주": "800500",
+    "하나금융": "802003",
+    "KB금융": "803103",
+    "농협금융": "804981",
+    "우리금융": "190593",
+    "농협은행": "804978",
+    "국민은행": "800551",
+    "신한은행": "800134",
+    "우리은행": "800176",
+    "하나은행": "807041",
+    "KB국민카드": "800551",
+    "현대카드": "929863",
+    "신한카드": "803964",
+    "BC카드": "800615",
+    "삼성카드": "803875",
+    "한국캐피탈": "800936",
+    "현대캐피탈": "809903",
+    "한국투자금융지주": "800881",
+    "SK이노베이션": "601590",
+    "GS에너지": "909665",
+    "SK": "808580",
+    "GS": "902749",
+    "SK가스": "400108",
+    "GS칼텍스": "317406",
+    "S-Oil": "315250",
+    "SK에너지": "308969",
+    "코리아에너지터미널": "911488",
+    "GS파워": "400682",
+    "GSEPS": "400607",
+    "삼천리": "312291",
+    "LG에너지솔루션": "202854",
+    "한온시스템": "332046",
+    "포스코퓨처엠": "330507",
+    "한국타이어": "310883",
+    "SK하이닉스": "332477",
+    "LG이노텍": "325007",
+    "LG전자": "301082",
+    "LS일렉트릭": "324951",
+    "이마트": "909428",
+    "LF": "305034",
+    "CJ제일제당": "305957",
+    "SK네트웍스": "600282",
+    "CJ대한통운": "701044",
+    "포스코": "209694",
+    "현대제철": "320857",
+    "고려아연": "319927",
+    "LG화학": "300262",
+    "SK지오센트릭": "308970",
+    "주택도시보증공사": "928385",
+    "기업은행": "807938"
+},
+"cmpCD_map" : {
+    "현대해상": "1440484",
+    "농협생명": "5006516",
+    "메리츠화재": "1953306",
+    "교보생명": "1441780",
+    "삼성화재": "1370770",
+    "삼성생명": "1809356",
+    "신한라이프": "1887590",
+    "흥국생명": "1962093",
+    "동양생명": "1323802",
+    "미래에셋생명": "",
+    "신한지주": "1975848",
+    "하나금융": "2602693",
+    "KB금융": "5001252",
+    "농협금융": "5006672",
+    "우리금융": "5109037",
+    "농협은행": "5006517",
+    "국민은행": "1516757",
+    "신한은행": "1935080",
+    "우리은행": "1471990",
+    "하나은행": "1865213",
+    "KB국민카드": "5004532",
+    "현대카드": "1603526",
+    "신한카드": "1403378",
+    "BC카드": "1351141",
+    "삼성카드": "1338744",
+    "한국캐피탈": "1305160",
+    "현대캐피탈": "1174449",
+    "한국투자금융지주": "1297561",
+    "SK이노베이션": "5000431",
+    "GS에너지": "5006369",
+    "SK": "1196679",
+    "GS": "2181110",
+    "SK가스": "1716548",
+    "GS칼텍스": "1999305",
+    "S-Oil": "1756193",
+    "SK에너지": "5004410",
+    "코리아에너지터미널": "5204359",
+    "GS파워": "1111499",
+    "GSEPS": "1111499",
+    "삼천리": "1566197",
+    "LG에너지솔루션": "5201587",
+    "한온시스템": "1889305",
+    "포스코퓨처엠": "1908036",
+    "한국타이어": "5007561",
+    "SK하이닉스": "1670352",
+    "LG이노텍": "1784472",
+    "LG전자": "1799533",
+    "LS일렉트릭": "1139423",
+    "이마트": "5004787",
+    "LF": "5001418",
+    "CJ제일제당": "5000500",
+    "SK네트웍스": "1748214",
+    "CJ대한통운": "1479387",
+    "포스코": "5205557",
+    "현대제철": "1899929",
+    "고려아연": "1762248",
+    "LG화학": "1660632",
+    "SK지오센트릭": "5004411",
+    "주택도시보증공사": "1863199",
+    "기업은행": "1692278"
+  },
+  "common_filter_categories": {
+    "신용/등급": [
+      "신용등급", "등급전망", "하락", "강등", "하향", "상향", "EOD", "부실", "미지급", "부도", "수요 미달", "미매각", "제도 개편", "사고", "디폴트"
+    ],
+    "수요/공급": [
+      "수요", "공급", "둔화", "위축", "성장", "급등", "급락", "부진", "매수", "매도", "수급", "상승", "하락", "심화"
+    ],
+    "실적/재무": [
+      "실적", "매출", "영업이익", "적자", "손실", "비용", "부채비율", "이자보상배율", "이익", "수익", "흑자", "건전성", "충당금","유동성 위기", "자본잠식", "생산중단", "계약해지", "이익", "수익", "흑자", "건전성", "충당금", "마진", "점유율"
+    ],
+    "자금/조달": [
+      "차입", "조달", "설비투자", "회사채", "공모채", "발행", "인수", "매각", "M&A", "합병", "계열 분리", "구조조정", "다각화", "수요 미달", "미매각", "차환 실패", "지분", "자사주", "상장", "IPO", "유동화", "콜옵션", "채무상환"
+    ],
+    "거시/경제": [
+      "금리", "환율", "관세", "무역제재", "보조금", "세액 공제", "제도 개편"
+    ],
+    "경영리스크": [
+      "횡령", "배임", "공정거래", "구조 재편", "오너리스크", "대주주", "지배구조", "경영권 분쟁", "유상증자", "자본확충", "분식회계", "부실", "자본건전성"
+    ],
+    "소송/규제": [
+      "위반", "불법", "사고", "과징금", "영업정지", "인허가 취소", "기소", "파업", "집단소송", "비리", "인력 유출", "분쟁", "세금조사", "불공정거래", "행정처분", "탈세", "소송", "패소"
+    ]     
+  },
+  "industry_filter_categories": {
+    "은행 및 금융지주": [
+      "경영실태평가", "BIS", "CET1", "자본비율", "상각형 조건부자본증권", "자본확충", "자본여력", "자본적정성", "LCR",
+      "조달금리", "NIM", "순이자마진", "고정이하여신비율", "대손충당금", "충당금", "부실채권", "연체율", "가계대출", "취약차주"
+    ],
+    "보험사": [
+      "보장성보험", "저축성보험", "변액보험", "퇴직연금", "일반보험", "자동차보험", "ALM", "지급여력비율", "K-ICS",
+      "보험수익성", "보험손익", "수입보험료", "CSM", "상각", "투자손익", "운용성과", "IFRS4", "IFRS17", "보험부채",
+      "장기선도금리", "최종관찰만기", "유동성 프리미엄", "신종자본증권", "후순위채", "위험자산비중", "가중부실자산비율"
+    ],
+    "카드사": [
+      "민간소비지표", "대손준비금", "가계부채", "연체율", "가맹점카드수수료", "대출성자산", "신용판매자산", "고정이하여신", "레버리지배율",
+      "건전성", "케이뱅크", "이탈"
+    ],
+    "캐피탈": [
+      "충당금커버리지비율", "고정이하여신", "PF구조조정", "리스자산", "손실흡수능력", "부동산PF연체채권", "자산포트폴리오", "건전성",
+      "조정총자산수익률", "군인공제회"
+    ],
+    "지주사": [
+      "SK지오센트릭", "SK에너지", "SK엔무브", "SK인천석유화학", "GS칼텍스", "GS파워", "SK이노베이션", "SK텔레콤", "SK온",
+      "GS에너지", "GS리테일", "GS E&C", "2차전지", "석유화학", "윤활유", "전기차", "배터리", "정유", "이동통신"
+    ],
+    "에너지": [
+      "정유", "유가", "정제마진", "스프레드", "가동률", "재고 손실", "중국 수요", "IMO 규제", "저유황 연료", "LNG",
+      "터미널", "윤활유"
+    ],
+    "발전": [
+      "LNG", "천연가스", "유가", "SMP", "REC", "계통시장", "탄소세", "탄소배출권", "전력시장 개편", "전력 자율화",
+      "가동률", "도시가스"
+    ],
+    "자동차": [
+      "AMPC 보조금", "IRA 인센티브", "중국 배터리", "EV 수요", "전기차", "ESS수요", "리튬", "타이어"
+    ],
+    "전기전자": [
+      "CHIPS 보조금", "중국", "DRAM", "HBM", "광할솔루션", "아이폰", "HVAC", "HVTR"
+    ],
+    "철강": [
+      "철광석", "후판", "강판", "철근", "스프레드", "철강", "가동률", "제철소", "셧다운", "중국산 저가",
+      "중국 수출 감소", "건설경기", "조선 수요", "파업"
+    ],
+    "비철": [
+      "연", "아연", "니켈", "안티모니", "경영권 분쟁", "MBK", "영풍"
+    ],
+    "소매": [
+      "내수부진", "시장지배력", "SK텔레콤", "SK매직", "CLS", "HMR", "라이신", "아미노산", "슈완스컴퍼니",
+      "의류", "신세계", "대형마트 의무휴업", "G마켓", "W컨셉", "스타필드"
+    ],
+    "석유화학": [
+      "석유화학", "석화", "유가", "증설", "스프레드", "가동률", "PX", "벤젠", "중국 증설", "중동 COTC",
+      "LG에너지솔루션", "전기차", "배터리", "리튬", "IRA", "AMPC", "NCC"
+    ],
+    "건설": [
+      "철근 가격", "시멘트 가격", "공사비", "SOC 예산", "도시정비 지원", "우발채무", "수주", "주간사", "사고",
+      "시공능력순위", "미분양", "대손충당금"
+    ],
+    "특수채": [
+      "자본확충", "HUG", "전세사기", "보증사고", "보증료율", "회수율", "보증잔액", "대위변제액",
+      "중소기업대출", "대손충당금", "부실채권", "불법", "구속", "주택임대차보호법"
+    ]
+  },
+  "favorite_to_industry_major": {
+  "5대금융지주": ["은행 및 금융지주"],
+  "5대시중은행": ["은행 및 금융지주"],
+  "보험사": ["보험사"],
+  "카드사": ["카드사"],
+  "캐피탈": ["캐피탈"],
+  "지주사": ["지주사"],
+  "에너지": ["에너지"],
+  "발전": ["발전"],
+  "자동차": ["자동차"],
+  "석유화학": ["석유화학"],
+  "전기/전자": ["전기전자"],
+  "비철/철강": ["철강", "비철"],
+  "소비재": ["소매"],
+  "건설": ["건설"],
+  "특수채": ["특수채"]
   }
 }
