--- a/config.json
+++ b/config.json
@@ -19,338 +19,102 @@
     "hankookilbo.com", "nocutnews.co.kr", "bloter.net", "segye.com", "bizwatch.co.kr", "newsprime.co.kr",
     "meconomynews.com", "newsway.co.kr"
   ],
-  "favorite_categories": {
-    "국/공채": [],
-    "공공기관": [],
-    "보험사": ["현대해상", "농협생명", "메리츠화재", "교보생명", "삼성화재", "삼성생명", "신한라이프", "흥국생명", "동양생명", "미래에셋생명"],
-    "5대금융지주": ["신한지주", "하나금융", "KB금융", "농협금융", "우리금융"],
-    "5대시중은행": ["농협은행", "국민은행", "신한은행", "우리은행", "하나은행"],
-    "카드사": ["KB국민카드", "현대카드", "신한카드", "BC카드", "삼성카드"],
-    "캐피탈": ["한국캐피탈", "현대캐피탈"],
-    "지주사": ["한국투자금융지주", "SK이노베이션", "GS에너지", "SK", "GS"],
-    "에너지": ["SK가스", "GS칼텍스", "S-Oil", "SK에너지", "코리아에너지터미널"],
-    "발전": ["GS파워", "GSEPS", "삼천리"],
-    "자동차": ["LG에너지솔루션", "한온시스템", "포스코퓨처엠", "한국타이어"],
-    "전기/전자": ["SK하이닉스", "LG이노텍", "LG전자", "LS일렉트릭"],
-    "소비재": ["이마트", "LF", "CJ제일제당", "SK네트웍스", "CJ대한통운"],
-    "비철/철강": ["포스코", "현대제철", "고려아연"],
-    "석유화학": ["LG화학", "SK지오센트릭"],
-    "건설": [],
-    "특수채": ["주택도시보증공사", "기업은행"]
+ "favorite_categories": {
+    "PE/VC": [
+      "MBK", "IMM PE", "한앤코", "VIG파트너스", "H&Q", "스틱인베스트먼트",
+      "KKR", "Carlyle", "Blackstone", "Brookfield", "Macquarie", "TPG", "GIP", "Stonepeak",
+      "컨티뉴에이션 펀드", "세컨더리 펀드", "코인베스트", "셀다운", "리파이낸싱"
+    ],
+    "부동산/리츠": [
+      "오피스 딜", "물류센터 매입", "리츠 상장", "리츠 인수", "롯데리츠", "신한서부티엔디리츠",
+      "NH올원리츠", "이지스자산운용", "마스턴투자운용", "코람코자산신탁", "자산유동화", "PF-ABS"
+    ],
+    "인프라/에너지": [
+      "해상풍력", "태양광", "ESS", "연료전지", "수소충전소", "열병합", "송배전",
+      "PPA", "RE100", "REC", "민자발전", "민자 집단에너지", "장기전력구매계약"
+    ],
+    "데이터센터/통신": [
+      "데이터센터", "IDC", "하이퍼스케일 DC", "코로케이션", "다크파이버", "해저케이블",
+      "엣지 데이터센터", "백본망", "캐리어 호텔"
+    ],
+    "물류/항만": [
+      "항만터미널", "컨세션", "민자SOC", "택배허브", "콜드체인", "리퍼터미널", "ICD",
+      "철도물류", "복합물류센터", "FTZ"
+    ],
+    "환경/폐기물/수처리": [
+      "소각장", "매립", "SRF", "MBT", "바이오가스", "하수처리", "상수도", "스마트미터",
+      "에코타운", "자원순환"
+    ],
+    "SOC/민자": [
+      "BTO", "BTL", "PPP", "PFI", "컨세션", "운영권 양수", "MRG", "수익공유", "리파이낸싱"
+    ],
+    "항공/공항/철도": [
+      "공항터미널", "면세점 운영권", "공항 도시가스", "공항 수전", "철도역세권 개발",
+      "리스백", "슬롯", "공항 민영화"
+    ],
+    "해외대체": [
+      "미국 데이터센터", "유럽 항만", "영국 오피스", "호주 요금규제자산", "유럽 재생에너지",
+      "브라질 송전", "중동 수소", "동남아 물류"
+    ],
+    "연기금/LP": [
+      "국민연금 대체투자", "사학연금 대체투자", "공무원연금 대체투자",
+      "우정사업본부 대체투자", "행복기금 대체투자", "KIC 대체투자", "카이스트기금 대체"
+    ]
   },
   "excel_company_categories": {
-    "국/공채": [],
-    "공공기관": [],
-    "보험사": [
-      "현대해상화재보험(후)", "농협생명보험(후)", "메리츠화재해상보험(후)", "교보생명(후)",
-      "삼성화재", "삼성생명", "신한라이프(후)", "흥국생명보험(후)", "동양생명보험(후)", "미래에셋생명(후)"
+    "PE/VC": [
+      "MBK", "IMM PE", "한앤코", "VIG파트너스", "H&Q", "스틱인베스트먼트",
+      "KKR", "Carlyle", "Blackstone", "Brookfield", "Macquarie", "TPG", "GIP", "Stonepeak",
+      "컨티뉴에이션 펀드", "세컨더리 펀드", "코인베스트", "셀다운", "리파이낸싱"
     ],
-    "5대금융지주": [
-      "신한지주", "하나금융지주", "KB금융", "농협금융지주", "우리금융지주"
+    "부동산/리츠": [
+      "오피스 딜", "물류센터 매입", "리츠 상장", "리츠 인수", "롯데리츠", "신한서부티엔디리츠",
+      "NH올원리츠", "이지스자산운용", "마스턴투자운용", "코람코자산신탁", "자산유동화", "PF-ABS"
     ],
-    "5대시중은행": [
-      "농협은행", "국민은행", "신한은행", "우리은행", "하나은행"
+    "인프라/에너지": [
+      "해상풍력", "태양광", "ESS", "연료전지", "수소충전소", "열병합", "송배전",
+      "PPA", "RE100", "REC", "민자발전", "민자 집단에너지", "장기전력구매계약"
     ],
-    "카드사": [
-      "케이비카드", "현대카드", "신한카드", "비씨카드", "삼성카드"
+    "데이터센터/통신": [
+      "데이터센터", "IDC", "하이퍼스케일 DC", "코로케이션", "다크파이버", "해저케이블",
+      "엣지 데이터센터", "백본망", "캐리어 호텔"
     ],
-    "캐피탈": [
-      "한국캐피탈", "현대캐피탈"
+    "물류/항만": [
+      "항만터미널", "컨세션", "민자SOC", "택배허브", "콜드체인", "리퍼터미널", "ICD",
+      "철도물류", "복합물류센터", "FTZ"
     ],
-    "지주사": [
-      "한국투자금융지주", "SK이노베이션", "지에스에너지", "SK", "GS"
+    "환경/폐기물/수처리": [
+      "소각장", "매립", "SRF", "MBT", "바이오가스", "하수처리", "상수도", "스마트미터",
+      "에코타운", "자원순환"
     ],
-    "에너지": [
-      "SK가스", "GS칼텍스", "S-Oil", "SK에너지", "코리아에너지터미널"
+    "SOC/민자": [
+      "BTO", "BTL", "PPP", "PFI", "컨세션", "운영권 양수", "MRG", "수익공유", "리파이낸싱"
     ],
-    "발전": [
-      "GS파워", "지에스이피에스", "삼천리"
+    "항공/공항/철도": [
+      "공항터미널", "면세점 운영권", "공항 도시가스", "공항 수전", "철도역세권 개발",
+      "리스백", "슬롯", "공항 민영화"
     ],
-    "자동차": [
-      "LG에너지솔루션", "한온시스템", "포스코퓨처엠", "한국타이어앤테크놀로지"
+    "해외대체": [
+      "미국 데이터센터", "유럽 항만", "영국 오피스", "호주 요금규제자산", "유럽 재생에너지",
+      "브라질 송전", "중동 수소", "동남아 물류"
     ],
-    "전기/전자": [
-      "SK하이닉스", "LG이노텍", "LG전자", "엘에스일렉트릭"
-    ],
-    "소비재": [
-      "이마트", "LF", "CJ제일제당", "SK네트웍스", "CJ대한통운"
-    ],
-    "비철/철강": [
-      "포스코", "현대제철", "고려아연"
-    ],
-    "석유화학": [
-      "LG화학", "SK지오센트릭"
-    ],
-    "건설": [],
-    "특수채": [
-      "주택도시보증공사", "기업은행"
+    "연기금/LP": [
+      "국민연금 대체", "사학연금 대체", "공무원연금 대체",
+      "우정본부 대체", "행복기금 대체", "KIC 대체", "대학기금 대체"
     ]
   },
-  "synonym_map": {
-      "신한지주":[
-       "신한금융"
-    ],
-    "농협금융지주":[
-      "농협금융"
-    ],
-    "KB금융": [
-      "케이비금융"
-    ],
-    "KB국민카드": [
-      "케이비카드", "국민카드", "KB카드"
-    ],
-    "BC카드": [
-      "비씨카드"
-    ],
-    "한국투자금융지주": [
-      "한국금융지주"
-    ],
-    "SK이노베이션": [
-      "SK이노", "에스케이이노", "에스케이이노베이션"
-    ],
-    "GS에너지": [
-      "지에스에너지"
-    ],
-    "SK": [
-      "에스케이"
-    ],
-    "GS": [
-      "지에스"
-    ],
-    "S-Oil": [
-      "에스오일"
-    ],
-    "SK에너지": [
-      "에스케이에너지"
-    ],
-    "GS파워": [
-      "지에스파워"
-    ],
-    "GSEPS": [
-      "지에스이피에스"
-    ],
-    "LG에너지솔루션": [
-      "LG엔솔"
-    ],
-    "SK하이닉스": [
-      "에스케이하이닉스", "하이닉스"
-    ],
-    "LG이노텍": [
-      "엘지이노텍"
-    ],
-    "LG전자": [
-      "엘지전자"
-    ],
-    "LS일렉트릭": [
-      "엘에스일렉트릭"
-    ],
-    "LF": [
-      "엘에프"
-    ],
-    "CJ제일제당": [
-      "씨제이제일제당", "제일제당"
-    ],
-    "SK네트웍스": [
-      "에스케이네트웍스"
-    ],
-    "CJ대한통운": [
-      "씨제이대한통운", "대한통운"
-    ],
-    "LG화학": [
-      "엘지화학"
-    ],
-    "SK지오센트릭": [
-      "에스케이지오센트릭", "지오센트릭"
-    ],
-    "주택도시보증공사": [
-      "허그", "HUG"
-    ]
-      },
-"kiscd_map": {
-  "현대해상": "870102",
-  "농협생명": "H80828",
-  "메리츠화재": "870129",
-  "교보생명": "870200",
-  "삼성화재": "",
-  "삼성생명": "870021",
-  "신한라이프": "821446",
-  "흥국생명": "870153",
-  "동양생명": "821411",
-  "미래에셋생명": "821241",
-  "한국투자금융지주": "097600",
-  "신한지주": "177167",
-  "하나금융": "380557",
-  "KB금융": "C46308",
-  "농협금융": "H81975",
-  "우리금융": "JK6097",
-  "농협은행": "H80827",
-  "국민은행": "182744",
-  "신한은행": "840130",
-  "우리은행": "840149",
-  "하나은행": "821365",
-  "KB국민카드": "H00546",
-  "현대카드": "044292",
-  "신한카드": "812668",
-  "BC카드": "820512",
-  "삼성카드": "990345",
-  "한국캐피탈": "813362",
-  "현대캐피탈": "021637",
-  "SK이노베이션": "490896",
-  "GS에너지": "H79512",
-  "SK": "814261",
-  "GS": "243139",
-  "SK가스": "400122",
-  "GS칼텍스": "352705",
-  "S-Oil": "350940",
-  "SK에너지": "F39728",
-  "코리아에너지터미널": "L57897",
-  "GS파워": "145222",
-  "GSEPS": "103160",
-  "삼천리": "350010",
-  "LG에너지솔루션": "LZ0049",
-  "한온시스템": "386961",
-  "포스코퓨처엠": "520233",
-  "한국타이어": "I66472",
-  "SK하이닉스": "383511",
-  "LG이노텍": "380687",
-  "LG전자": "196275",
-  "LS일렉트릭": "388696",
-  "이마트": "H32072",
-  "LF": "479416",
-  "CJ제일제당": "494292",
-  "SK네트웍스": "610259",
-  "CJ대한통운": "710083",
-  "포스코": "OX9158",
-  "현대제철": "370142",
-  "고려아연": "370380",
-  "LG화학": "162209",
-  "SK지오센트릭": "F79581",
-  "주택도시보증공사": "041544",
-  "기업은행": "822167"
-  },
-"kr_COMP_CD_map": {
-    "현대해상": "801557",
-    "농협생명": "504085",
-    "메리츠화재": "801450",
-    "교보생명": "801405",
-    "삼성화재": "801503",
-    "삼성생명": "801480",
-    "신한라이프": "808161",
-    "흥국생명": "801560",
-    "동양생명": "808235",
-    "미래에셋생명": "801397",
-    "신한지주": "800500",
-    "하나금융": "802003",
-    "KB금융": "803103",
-    "농협금융": "804981",
-    "우리금융": "190593",
-    "농협은행": "804978",
-    "국민은행": "800551",
-    "신한은행": "800134",
-    "우리은행": "800176",
-    "하나은행": "807041",
-    "KB국민카드": "800551",
-    "현대카드": "929863",
-    "신한카드": "803964",
-    "BC카드": "800615",
-    "삼성카드": "803875",
-    "한국캐피탈": "800936",
-    "현대캐피탈": "809903",
-    "한국투자금융지주": "800881",
-    "SK이노베이션": "601590",
-    "GS에너지": "909665",
-    "SK": "808580",
-    "GS": "902749",
-    "SK가스": "400108",
-    "GS칼텍스": "317406",
-    "S-Oil": "315250",
-    "SK에너지": "308969",
-    "코리아에너지터미널": "911488",
-    "GS파워": "400682",
-    "GSEPS": "400607",
-    "삼천리": "312291",
-    "LG에너지솔루션": "202854",
-    "한온시스템": "332046",
-    "포스코퓨처엠": "330507",
-    "한국타이어": "310883",
-    "SK하이닉스": "332477",
-    "LG이노텍": "325007",
-    "LG전자": "301082",
-    "LS일렉트릭": "324951",
-    "이마트": "909428",
-    "LF": "305034",
-    "CJ제일제당": "305957",
-    "SK네트웍스": "600282",
-    "CJ대한통운": "701044",
-    "포스코": "209694",
-    "현대제철": "320857",
-    "고려아연": "319927",
-    "LG화학": "300262",
-    "SK지오센트릭": "308970",
-    "주택도시보증공사": "928385",
-    "기업은행": "807938"
-},
-"cmpCD_map" : {
-    "현대해상": "1440484",
-    "농협생명": "5006516",
-    "메리츠화재": "1953306",
-    "교보생명": "1441780",
-    "삼성화재": "1370770",
-    "삼성생명": "1809356",
-    "신한라이프": "1887590",
-    "흥국생명": "1962093",
-    "동양생명": "1323802",
-    "미래에셋생명": "",
-    "신한지주": "1975848",
-    "하나금융": "2602693",
-    "KB금융": "5001252",
-    "농협금융": "5006672",
-    "우리금융": "5109037",
-    "농협은행": "5006517",
-    "국민은행": "1516757",
-    "신한은행": "1935080",
-    "우리은행": "1471990",
-    "하나은행": "1865213",
-    "KB국민카드": "5004532",
-    "현대카드": "1603526",
-    "신한카드": "1403378",
-    "BC카드": "1351141",
-    "삼성카드": "1338744",
-    "한국캐피탈": "1305160",
-    "현대캐피탈": "1174449",
-    "한국투자금융지주": "1297561",
-    "SK이노베이션": "5000431",
-    "GS에너지": "5006369",
-    "SK": "1196679",
-    "GS": "2181110",
-    "SK가스": "1716548",
-    "GS칼텍스": "1999305",
-    "S-Oil": "1756193",
-    "SK에너지": "5004410",
-    "코리아에너지터미널": "5204359",
-    "GS파워": "1111499",
-    "GSEPS": "1111499",
-    "삼천리": "1566197",
-    "LG에너지솔루션": "5201587",
-    "한온시스템": "1889305",
-    "포스코퓨처엠": "1908036",
-    "한국타이어": "5007561",
-    "SK하이닉스": "1670352",
-    "LG이노텍": "1784472",
-    "LG전자": "1799533",
-    "LS일렉트릭": "1139423",
-    "이마트": "5004787",
-    "LF": "5001418",
-    "CJ제일제당": "5000500",
-    "SK네트웍스": "1748214",
-    "CJ대한통운": "1479387",
-    "포스코": "5205557",
-    "현대제철": "1899929",
-    "고려아연": "1762248",
-    "LG화학": "1660632",
-    "SK지오센트릭": "5004411",
-    "주택도시보증공사": "1863199",
-    "기업은행": "1692278"
+   "synonym_map": {
+    "해상풍력": ["오프쇼어풍력", "해상풍력발전", "Offshore wind"],
+    "태양광": ["PV", "Solar PV", "포토볼타익"],
+    "데이터센터": ["IDC", "DC", "하이퍼스케일 데이터센터"],
+    "민자": ["PPP", "PFI", "BTO", "BTL", "Concession", "컨세션"],
+    "리파이낸싱": ["Refinancing", "재원재조달"],
+    "유동화": ["ABS", "ABCP", "PF-ABS", "자산유동화"],
+    "셀다운": ["Stake sale", "지분매각"],
+    "연료전지": ["Fuel cell"],
+    "열병합": ["CHP"],
+    "송배전": ["Transmission", "Distribution"],
+    "콜드체인": ["저온물류", "Cold chain"]
   },
   "common_filter_categories": {
     "신용/등급": [
@@ -436,20 +200,15 @@
     ]
   },
   "favorite_to_industry_major": {
-  "5대금융지주": ["은행 및 금융지주"],
-  "5대시중은행": ["은행 및 금융지주"],
-  "보험사": ["보험사"],
-  "카드사": ["카드사"],
-  "캐피탈": ["캐피탈"],
-  "지주사": ["지주사"],
-  "에너지": ["에너지"],
-  "발전": ["발전"],
-  "자동차": ["자동차"],
-  "석유화학": ["석유화학"],
-  "전기/전자": ["전기전자"],
-  "비철/철강": ["철강", "비철"],
-  "소비재": ["소매"],
-  "건설": ["건설"],
-  "특수채": ["특수채"]
+    "PE/VC": ["대체_거래/조달", "대체_펀드레이징"],
+    "부동산/리츠": ["대체_거래/조달", "대체_운영/리스크"],
+    "인프라/에너지": ["대체_거래/조달", "대체_운영/리스크", "대체_정책/규제"],
+    "데이터센터/통신": ["대체_거래/조달", "대체_운영/리스크"],
+    "물류/항만": ["대체_거래/조달", "대체_운영/리스크"],
+    "환경/폐기물/수처리": ["대체_거래/조달", "대체_운영/리스크", "대체_정책/규제"],
+    "SOC/민자": ["대체_거래/조달", "대체_정책/규제"],
+    "항공/공항/철도": ["대체_거래/조달", "대체_운영/리스크"],
+    "해외대체": ["대체_거래/조달", "대체_운영/리스크"],
+    "연기금/LP": ["대체_펀드레이징", "대체_정책/규제"]
   }
 }
