--- a/config.json
+++ b/config.json
@@ -116,29 +116,28 @@
     "송배전": ["Transmission", "Distribution"],
     "콜드체인": ["저온물류", "Cold chain"]
   },
-  "common_filter_categories": {
-    "신용/등급": [
-      "신용등급", "등급전망", "하락", "강등", "하향", "상향", "EOD", "부실", "미지급", "부도", "수요 미달", "미매각", "제도 개편", "사고", "디폴트"
-    ],
-    "수요/공급": [
-      "수요", "공급", "둔화", "위축", "성장", "급등", "급락", "부진", "매수", "매도", "수급", "상승", "하락", "심화"
-    ],
-    "실적/재무": [
-      "실적", "매출", "영업이익", "적자", "손실", "비용", "부채비율", "이자보상배율", "이익", "수익", "흑자", "건전성", "충당금","유동성 위기", "자본잠식", "생산중단", "계약해지", "이익", "수익", "흑자", "건전성", "충당금", "마진", "점유율"
-    ],
-    "자금/조달": [
-      "차입", "조달", "설비투자", "회사채", "공모채", "발행", "인수", "매각", "M&A", "합병", "계열 분리", "구조조정", "다각화", "수요 미달", "미매각", "차환 실패", "지분", "자사주", "상장", "IPO", "유동화", "콜옵션", "채무상환"
-    ],
-    "거시/경제": [
-      "금리", "환율", "관세", "무역제재", "보조금", "세액 공제", "제도 개편"
-    ],
-    "경영리스크": [
-      "횡령", "배임", "공정거래", "구조 재편", "오너리스크", "대주주", "지배구조", "경영권 분쟁", "유상증자", "자본확충", "분식회계", "부실", "자본건전성"
-    ],
-    "소송/규제": [
-      "위반", "불법", "사고", "과징금", "영업정지", "인허가 취소", "기소", "파업", "집단소송", "비리", "인력 유출", "분쟁", "세금조사", "불공정거래", "행정처분", "탈세", "소송", "패소"
-    ]     
-  },
+"common_filter_categories": {
+  "대체_거래/조달": [
+    "인수", "매각", "셀다운", "공동투자", "컨소시엄", "리파이낸싱",
+    "프로젝트 파이낸싱", "브릿지론", "클로징", "터미시트", "LOI", "우선협상대상자"
+  ],
+  "대체_운영/리스크": [
+    "DSCR", "트래픽", "가동률", "이용률", "PPA", "REC", "SMP",
+    "민원", "공사 중지", "지연", "공사비 상승", "유지보수", "보증이행", "변전소", "계통연계"
+  ],
+  "대체_정책/규제": [
+    "규제", "정책 변경", "요금 규제", "허가", "인가", "컨세션", "민자",
+    "환경영향평가", "송전선로", "입지", "세액공제", "보조금", "RE100"
+  ],
+  "대체_펀드레이징/LP": [
+    "펀드 결성", "펀드 클로징", "커밋먼트", "LP", "GP", "세컨더리",
+    "컨티뉴에이션 펀드", "리캡", "드로다운", "리미티드파트너", "사이드레터"
+  ],
+  "대체_리스크이벤트": [
+    "소송", "규제위반", "민형사", "허가 취소", "보증사고", "부실",
+    "회수 지연", "연체", "채무불이행", "계약해지", "환매요청"
+  ]
+},
   "industry_filter_categories": {
     "은행 및 금융지주": [
       "경영실태평가", "BIS", "CET1", "자본비율", "상각형 조건부자본증권", "자본확충", "자본여력", "자본적정성", "LCR",
