--- a/config.json
+++ b/config.json
@@ -116,45 +116,88 @@
     "송배전": ["Transmission", "Distribution"],
     "콜드체인": ["저온물류", "Cold chain"]
   },
-"sector_filter_categories": {
-  "PE/VC": [
-    "인수", "셀다운", "공동투자", "컨소시엄", "리파이낸싱",
-    "RCF", "Covenant", "Leverage", "유동성 지원", "드로다운",
-    "컨티뉴에이션 펀드", "세컨더리", "GP커밋", "LP", "IRR", "MOIC"
+"common_filter_categories": {
+  "대체_거래/조달": [
+    "인수", "매각", "셀다운", "공동투자", "컨소시엄", "리파이낸싱",
+    "프로젝트 파이낸싱", "브릿지론", "클로징", "터미시트", "LOI", "우선협상대상자"
   ],
-  "부동산/리츠": [
-    "오피스 공실률", "임대료", "캡레이트", "DSCR",
-    "리츠 상장", "자본확충", "리츠 인수", "자산유동화", "PF-ABS",
-    "브릿지론", "LTV", "운영수익", "재임대"
+  "대체_운영/리스크": [
+    "DSCR", "트래픽", "가동률", "이용률", "PPA", "REC", "SMP",
+    "민원", "공사 중지", "지연", "공사비 상승", "유지보수", "보증이행", "변전소", "계통연계"
   ],
-  "인프라/에너지": [
-    "PPA", "SMP", "REC", "가동률", "전력수요",
-    "송배전", "계통연계", "DSCR", "O&M", "민원", "지연", "보증이행"
+  "대체_정책/규제": [
+    "규제", "정책 변경", "요금 규제", "허가", "인가", "컨세션", "민자",
+    "환경영향평가", "송전선로", "입지", "세액공제", "보조금", "RE100"
   ],
-  "데이터센터/통신": [
-    "코로케이션", "전력공급", "사용률", "하이퍼스케일",
-    "LTA", "CapEx", "Anchor Tenant", "백본망", "해저케이블"
+  "대체_펀드레이징/LP": [
+    "펀드 결성", "펀드 클로징", "커밋먼트", "LP", "GP", "세컨더리",
+    "컨티뉴에이션 펀드", "리캡", "드로다운", "리미티드파트너", "사이드레터"
   ],
-  "물류/항만": [
-    "터미널", "컨세션", "처리량", "슬롯", "ICD", "콜드체인"
-  ],
-  "환경/폐기물/수처리": [
-    "소각장", "매립", "SRF", "MBT", "가동률", "처리단가", "민원"
-  ],
-  "SOC/민자": [
-    "BTO", "BTL", "PPP", "PFI", "MRG", "수익공유", "운영권 양수"
-  ],
-  "항공/공항/철도": [
-    "슬롯", "면세점 운영권", "여객수요", "민영화", "수전", "도시가스"
-  ],
-  "해외대체": [
-    "미국 데이터센터", "유럽 항만", "영국 오피스", "호주 규제자산",
-    "브라질 송전", "중동 수소", "동남아 물류"
-  ],
-  "연기금/LP": [
-    "커밋먼트", "클로징", "리캡", "사이드레터", "세컨더리"
+  "대체_리스크이벤트": [
+    "소송", "규제위반", "민형사", "허가 취소", "보증사고", "부실",
+    "회수 지연", "연체", "채무불이행", "계약해지", "환매요청"
   ]
 },
+  "industry_filter_categories": {
+    "은행 및 금융지주": [
+      "경영실태평가", "BIS", "CET1", "자본비율", "상각형 조건부자본증권", "자본확충", "자본여력", "자본적정성", "LCR",
+      "조달금리", "NIM", "순이자마진", "고정이하여신비율", "대손충당금", "충당금", "부실채권", "연체율", "가계대출", "취약차주"
+    ],
+    "보험사": [
+      "보장성보험", "저축성보험", "변액보험", "퇴직연금", "일반보험", "자동차보험", "ALM", "지급여력비율", "K-ICS",
+      "보험수익성", "보험손익", "수입보험료", "CSM", "상각", "투자손익", "운용성과", "IFRS4", "IFRS17", "보험부채",
+      "장기선도금리", "최종관찰만기", "유동성 프리미엄", "신종자본증권", "후순위채", "위험자산비중", "가중부실자산비율"
+    ],
+    "카드사": [
+      "민간소비지표", "대손준비금", "가계부채", "연체율", "가맹점카드수수료", "대출성자산", "신용판매자산", "고정이하여신", "레버리지배율",
+      "건전성", "케이뱅크", "이탈"
+    ],
+    "캐피탈": [
+      "충당금커버리지비율", "고정이하여신", "PF구조조정", "리스자산", "손실흡수능력", "부동산PF연체채권", "자산포트폴리오", "건전성",
+      "조정총자산수익률", "군인공제회"
+    ],
+    "지주사": [
+      "SK지오센트릭", "SK에너지", "SK엔무브", "SK인천석유화학", "GS칼텍스", "GS파워", "SK이노베이션", "SK텔레콤", "SK온",
+      "GS에너지", "GS리테일", "GS E&C", "2차전지", "석유화학", "윤활유", "전기차", "배터리", "정유", "이동통신"
+    ],
+    "에너지": [
+      "정유", "유가", "정제마진", "스프레드", "가동률", "재고 손실", "중국 수요", "IMO 규제", "저유황 연료", "LNG",
+      "터미널", "윤활유"
+    ],
+    "발전": [
+      "LNG", "천연가스", "유가", "SMP", "REC", "계통시장", "탄소세", "탄소배출권", "전력시장 개편", "전력 자율화",
+      "가동률", "도시가스"
+    ],
+    "자동차": [
+      "AMPC 보조금", "IRA 인센티브", "중국 배터리", "EV 수요", "전기차", "ESS수요", "리튬", "타이어"
+    ],
+    "전기전자": [
+      "CHIPS 보조금", "중국", "DRAM", "HBM", "광할솔루션", "아이폰", "HVAC", "HVTR"
+    ],
+    "철강": [
+      "철광석", "후판", "강판", "철근", "스프레드", "철강", "가동률", "제철소", "셧다운", "중국산 저가",
+      "중국 수출 감소", "건설경기", "조선 수요", "파업"
+    ],
+    "비철": [
+      "연", "아연", "니켈", "안티모니", "경영권 분쟁", "MBK", "영풍"
+    ],
+    "소매": [
+      "내수부진", "시장지배력", "SK텔레콤", "SK매직", "CLS", "HMR", "라이신", "아미노산", "슈완스컴퍼니",
+      "의류", "신세계", "대형마트 의무휴업", "G마켓", "W컨셉", "스타필드"
+    ],
+    "석유화학": [
+      "석유화학", "석화", "유가", "증설", "스프레드", "가동률", "PX", "벤젠", "중국 증설", "중동 COTC",
+      "LG에너지솔루션", "전기차", "배터리", "리튬", "IRA", "AMPC", "NCC"
+    ],
+    "건설": [
+      "철근 가격", "시멘트 가격", "공사비", "SOC 예산", "도시정비 지원", "우발채무", "수주", "주간사", "사고",
+      "시공능력순위", "미분양", "대손충당금"
+    ],
+    "특수채": [
+      "자본확충", "HUG", "전세사기", "보증사고", "보증료율", "회수율", "보증잔액", "대위변제액",
+      "중소기업대출", "대손충당금", "부실채권", "불법", "구속", "주택임대차보호법"
+    ]
+  },
   "favorite_to_industry_major": {
     "PE/VC": ["대체_거래/조달", "대체_펀드레이징"],
     "부동산/리츠": ["대체_거래/조달", "대체_운영/리스크"],
