--- a/config.json
+++ b/config.json
@@ -889,46 +889,42 @@
   },
   "favorite_to_industry_major": {
     "PE/VC": [
-      "대체_거래/조달",
-      "대체_펀드레이징"
+      "은행 및 금융지주",
+      "보험사",
+      "카드사",
+      "캐피탈",
+      "지주사"
     ],
     "부동산/리츠": [
-      "대체_거래/조달",
-      "대체_운영/리스크"
+      "은행 및 금융지주",
+      "보험사",
+      "지주사"
     ],
     "인프라/에너지": [
-      "대체_거래/조달",
-      "대체_운영/리스크",
-      "대체_정책/규제"
+      "에너지",
+      "발전",
+      "특수채"
     ],
     "데이터센터/통신": [
-      "대체_거래/조달",
-      "대체_운영/리스크"
+      "지주사"
     ],
     "물류/항만": [
-      "대체_거래/조달",
-      "대체_운영/리스크"
+      "지주사"
     ],
     "환경/폐기물/수처리": [
-      "대체_거래/조달",
-      "대체_운영/리스크",
-      "대체_정책/규제"
+      "특수채"
     ],
     "SOC/민자": [
-      "대체_거래/조달",
-      "대체_정책/규제"
+      "특수채"
     ],
     "항공/공항/철도": [
-      "대체_거래/조달",
-      "대체_운영/리스크"
+      "지주사"
     ],
     "해외대체": [
-      "대체_거래/조달",
-      "대체_운영/리스크"
+      "지주사"
     ],
     "연기금/LP": [
-      "대체_펀드레이징",
-      "대체_정책/규제"
+      "은행 및 금융지주"
     ]
   }
 }
