--- a/config.json
+++ b/config.json
@@ -159,133 +159,77 @@
   ],
   "favorite_categories": {
     "PE/VC": [
-      "Affinity",
+      "MBK",
+      "IMM PE",
+      "한앤코",
+      "VIG파트너스",
+      "H&Q",
+      "스틱인베스트먼트",
+      "KKR",
+      "Carlyle",
       "Blackstone",
       "Brookfield",
-      "Buyout",
-      "Carlyle",
-      "Exit",
-      "GIP",
-      "Glenwood",
-      "H&Q",
-      "Hahn & Company",
-      "IMM PE",
-      "IMM인베스트먼트",
-      "KKR",
-      "KTB PE",
-      "MBK",
-      "MBO",
       "Macquarie",
-      "Mirae PE",
-      "NH PE",
-      "PIPE",
-      "Pre-IPO",
-      "Stonepeak",
       "TPG",
-      "VIG파트너스",
-      "Valuation",
-      "구주매각",
-      "리캡",
-      "리파이낸싱",
-      "세컨더리 펀드",
-      "셀다운",
-      "스틱인베스트먼트",
-      "인수금융",
-      "지분인수",
+      "GIP",
+      "Stonepeak",
       "컨티뉴에이션 펀드",
+      "세컨더리 펀드",
       "코인베스트",
-      "프리IPO",
-      "한앤코"
+      "셀다운",
+      "리파이낸싱"
     ],
     "부동산/리츠": [
-      "Anchor tenant",
-      "Cap rate",
-      "NH올원리츠",
-      "NOI",
-      "Occupancy",
-      "PF-ABS",
-      "공모리츠",
-      "롯데리츠",
+      "오피스 딜",
+      "물류센터 매입",
       "리츠 상장",
       "리츠 인수",
-      "리파이낸싱",
-      "마스턴리츠",
-      "마스턴투자운용",
-      "물류센터 매입",
-      "사모리츠",
-      "상업용부동산",
-      "신한리츠",
+      "롯데리츠",
       "신한서부티엔디리츠",
-      "오피스 거래",
-      "오피스 딜",
-      "오피스빌딩",
-      "이지스리츠",
+      "NH올원리츠",
       "이지스자산운용",
-      "자산유동화",
-      "코람코리츠",
+      "마스턴투자운용",
       "코람코자산신탁",
-      "프라임오피스"
+      "자산유동화",
+      "PF-ABS"
     ],
     "인프라/에너지": [
-      "BTL",
-      "BTO",
-      "Distribution",
+      "해상풍력",
+      "태양광",
       "ESS",
-      "PFI",
+      "연료전지",
+      "수소충전소",
+      "열병합",
+      "송배전",
       "PPA",
       "RE100",
       "REC",
-      "SMP",
-      "Transmission",
-      "그리드 연결",
-      "민자 집단에너지",
       "민자발전",
-      "송배전",
-      "송배전망",
-      "수소발전",
-      "수소충전소",
-      "연료전지",
-      "열병합",
-      "장기전력구매계약",
-      "전력거래소",
-      "전력시장개편",
-      "탄소배출권",
-      "태양광",
-      "해상풍력"
+      "민자 집단에너지",
+      "장기전력구매계약"
     ],
     "데이터센터/통신": [
-      "Carrier Hotel",
-      "Colocation",
-      "Edge DC",
-      "IDC",
-      "Network infra",
-      "다크파이버",
       "데이터센터",
-      "백본망",
-      "엣지 데이터센터",
-      "캐리어 호텔",
-      "코로케이션",
-      "클라우드 인프라",
-      "통신망 투자",
-      "하이퍼스케일",
+      "IDC",
       "하이퍼스케일 DC",
-      "해저케이블"
+      "코로케이션",
+      "다크파이버",
+      "해저케이블",
+      "엣지 데이터센터",
+      "백본망",
+      "캐리어 호텔"
     ],
     "물류/항만": [
-      "3PL",
-      "FTZ",
-      "ICD",
-      "Port concession",
-      "Rail freight",
-      "리퍼터미널",
-      "민자SOC",
-      "복합물류단지",
-      "복합물류센터",
-      "철도물류",
+      "항만터미널",
       "컨세션",
-      "콜드체인",
+      "민자SOC",
       "택배허브",
-      "항만터미널"
+      "콜드체인",
+      "리퍼터미널",
+      "ICD",
+      "철도물류",
+      "복합물류센터",
+      "FTZ"
     ],
     "환경/폐기물/수처리": [
       "소각장",
@@ -342,133 +286,77 @@
   },
   "excel_company_categories": {
     "PE/VC": [
-      "Affinity",
+      "MBK",
+      "IMM PE",
+      "한앤코",
+      "VIG파트너스",
+      "H&Q",
+      "스틱인베스트먼트",
+      "KKR",
+      "Carlyle",
       "Blackstone",
       "Brookfield",
-      "Buyout",
-      "Carlyle",
-      "Exit",
-      "GIP",
-      "Glenwood",
-      "H&Q",
-      "Hahn & Company",
-      "IMM PE",
-      "IMM인베스트먼트",
-      "KKR",
-      "KTB PE",
-      "MBK",
-      "MBO",
       "Macquarie",
-      "Mirae PE",
-      "NH PE",
-      "PIPE",
-      "Pre-IPO",
-      "Stonepeak",
       "TPG",
-      "VIG파트너스",
-      "Valuation",
-      "구주매각",
-      "리캡",
-      "리파이낸싱",
-      "세컨더리 펀드",
-      "셀다운",
-      "스틱인베스트먼트",
-      "인수금융",
-      "지분인수",
+      "GIP",
+      "Stonepeak",
       "컨티뉴에이션 펀드",
+      "세컨더리 펀드",
       "코인베스트",
-      "프리IPO",
-      "한앤코"
+      "셀다운",
+      "리파이낸싱"
     ],
     "부동산/리츠": [
-      "Anchor tenant",
-      "Cap rate",
-      "NH올원리츠",
-      "NOI",
-      "Occupancy",
-      "PF-ABS",
-      "공모리츠",
-      "롯데리츠",
+      "오피스 딜",
+      "물류센터 매입",
       "리츠 상장",
       "리츠 인수",
-      "리파이낸싱",
-      "마스턴리츠",
-      "마스턴투자운용",
-      "물류센터 매입",
-      "사모리츠",
-      "상업용부동산",
-      "신한리츠",
+      "롯데리츠",
       "신한서부티엔디리츠",
-      "오피스 거래",
-      "오피스 딜",
-      "오피스빌딩",
-      "이지스리츠",
+      "NH올원리츠",
       "이지스자산운용",
-      "자산유동화",
-      "코람코리츠",
+      "마스턴투자운용",
       "코람코자산신탁",
-      "프라임오피스"
+      "자산유동화",
+      "PF-ABS"
     ],
     "인프라/에너지": [
-      "BTL",
-      "BTO",
-      "Distribution",
+      "해상풍력",
+      "태양광",
       "ESS",
-      "PFI",
+      "연료전지",
+      "수소충전소",
+      "열병합",
+      "송배전",
       "PPA",
       "RE100",
       "REC",
-      "SMP",
-      "Transmission",
-      "그리드 연결",
-      "민자 집단에너지",
       "민자발전",
-      "송배전",
-      "송배전망",
-      "수소발전",
-      "수소충전소",
-      "연료전지",
-      "열병합",
-      "장기전력구매계약",
-      "전력거래소",
-      "전력시장개편",
-      "탄소배출권",
-      "태양광",
-      "해상풍력"
+      "민자 집단에너지",
+      "장기전력구매계약"
     ],
     "데이터센터/통신": [
-      "Carrier Hotel",
-      "Colocation",
-      "Edge DC",
-      "IDC",
-      "Network infra",
-      "다크파이버",
       "데이터센터",
-      "백본망",
-      "엣지 데이터센터",
-      "캐리어 호텔",
-      "코로케이션",
-      "클라우드 인프라",
-      "통신망 투자",
-      "하이퍼스케일",
+      "IDC",
       "하이퍼스케일 DC",
-      "해저케이블"
+      "코로케이션",
+      "다크파이버",
+      "해저케이블",
+      "엣지 데이터센터",
+      "백본망",
+      "캐리어 호텔"
     ],
     "물류/항만": [
-      "3PL",
-      "FTZ",
-      "ICD",
-      "Port concession",
-      "Rail freight",
-      "리퍼터미널",
-      "민자SOC",
-      "복합물류단지",
-      "복합물류센터",
-      "철도물류",
+      "항만터미널",
       "컨세션",
-      "콜드체인",
+      "민자SOC",
       "택배허브",
-      "항만터미널"
+      "콜드체인",
+      "리퍼터미널",
+      "ICD",
+      "철도물류",
+      "복합물류센터",
+      "FTZ"
     ],
     "환경/폐기물/수처리": [
       "소각장",
@@ -651,280 +539,165 @@
     ]
   },
   "industry_filter_categories": {
-    "은행 및 금융지주": [
-      "경영실태평가",
-      "BIS",
-      "CET1",
-      "자본비율",
-      "상각형 조건부자본증권",
-      "자본확충",
-      "자본여력",
-      "자본적정성",
-      "LCR",
-      "조달금리",
-      "NIM",
-      "순이자마진",
-      "고정이하여신비율",
-      "대손충당금",
-      "충당금",
-      "부실채권",
-      "연체율",
-      "가계대출",
-      "취약차주"
+    "PE/VC": [
+      "Buyout",
+      "MBO",
+      "컨티뉴에이션 펀드",
+      "세컨더리",
+      "프리IPO",
+      "Exit",
+      "구주매각",
+      "지분인수",
+      "인수금융",
+      "PIPE",
+      "Valuation",
+      "리캡",
+      "공동투자",
+      "셀다운",
+      "SPAC 합병",
+      "LBO",
+      "리파이낸싱"
     ],
-    "보험사": [
-      "보장성보험",
-      "저축성보험",
-      "변액보험",
-      "퇴직연금",
-      "일반보험",
-      "자동차보험",
-      "ALM",
-      "지급여력비율",
-      "K-ICS",
-      "보험수익성",
-      "보험손익",
-      "수입보험료",
-      "CSM",
-      "상각",
-      "투자손익",
-      "운용성과",
-      "IFRS4",
-      "IFRS17",
-      "보험부채",
-      "장기선도금리",
-      "최종관찰만기",
-      "유동성 프리미엄",
-      "신종자본증권",
-      "후순위채",
-      "위험자산비중",
-      "가중부실자산비율"
+    "부동산/리츠": [
+      "오피스 거래",
+      "오피스빌딩",
+      "상업용부동산",
+      "프라임오피스",
+      "리츠 상장",
+      "리츠 인수",
+      "공모리츠",
+      "사모리츠",
+      "물류센터 매입",
+      "NOI",
+      "Occupancy",
+      "Cap rate",
+      "Anchor tenant",
+      "Refinancing",
+      "PF-ABS",
+      "자산유동화"
     ],
-    "카드사": [
-      "민간소비지표",
-      "대손준비금",
-      "가계부채",
-      "연체율",
-      "가맹점카드수수료",
-      "대출성자산",
-      "신용판매자산",
-      "고정이하여신",
-      "레버리지배율",
-      "건전성",
-      "케이뱅크",
-      "이탈"
-    ],
-    "캐피탈": [
-      "충당금커버리지비율",
-      "고정이하여신",
-      "PF구조조정",
-      "리스자산",
-      "손실흡수능력",
-      "부동산PF연체채권",
-      "자산포트폴리오",
-      "건전성",
-      "조정총자산수익률",
-      "군인공제회"
-    ],
-    "지주사": [
-      "SK지오센트릭",
-      "SK에너지",
-      "SK엔무브",
-      "SK인천석유화학",
-      "GS칼텍스",
-      "GS파워",
-      "SK이노베이션",
-      "SK텔레콤",
-      "SK온",
-      "GS에너지",
-      "GS리테일",
-      "GS E&C",
-      "2차전지",
-      "석유화학",
-      "윤활유",
-      "전기차",
-      "배터리",
-      "정유",
-      "이동통신"
-    ],
-    "에너지": [
-      "정유",
-      "유가",
-      "정제마진",
-      "스프레드",
-      "가동률",
-      "재고 손실",
-      "중국 수요",
-      "IMO 규제",
-      "저유황 연료",
-      "LNG",
-      "터미널",
-      "윤활유"
-    ],
-    "발전": [
-      "LNG",
-      "천연가스",
-      "유가",
-      "SMP",
+    "인프라/에너지": [
+      "해상풍력",
+      "태양광",
+      "ESS",
+      "연료전지",
+      "수소발전",
+      "열병합",
+      "송배전망",
+      "Transmission",
+      "Distribution",
+      "PPA",
+      "RE100",
       "REC",
-      "계통시장",
-      "탄소세",
-      "탄소배출권",
-      "전력시장 개편",
-      "전력 자율화",
-      "가동률",
-      "도시가스"
+      "SMP",
+      "민자발전",
+      "전력시장개편",
+      "그리드 연결"
     ],
-    "자동차": [
-      "AMPC 보조금",
-      "IRA 인센티브",
-      "중국 배터리",
-      "EV 수요",
-      "전기차",
-      "ESS수요",
-      "리튬",
-      "타이어"
+    "데이터센터/통신": [
+      "데이터센터",
+      "IDC",
+      "하이퍼스케일",
+      "Colocation",
+      "Edge DC",
+      "해저케이블",
+      "백본망",
+      "Carrier Hotel",
+      "통신망 투자",
+      "클라우드 인프라"
     ],
-    "전기전자": [
-      "CHIPS 보조금",
-      "중국",
-      "DRAM",
-      "HBM",
-      "광할솔루션",
-      "아이폰",
-      "HVAC",
-      "HVTR"
+    "물류/항만": [
+      "항만터미널",
+      "Port concession",
+      "민자SOC",
+      "컨세션",
+      "복합물류단지",
+      "FTZ",
+      "3PL",
+      "콜드체인",
+      "리퍼터미널",
+      "Rail freight"
     ],
-    "철강": [
-      "철광석",
-      "후판",
-      "강판",
-      "철근",
-      "스프레드",
-      "철강",
-      "가동률",
-      "제철소",
-      "셧다운",
-      "중국산 저가",
-      "중국 수출 감소",
-      "건설경기",
-      "조선 수요",
-      "파업"
+    "환경/폐기물/수처리": [
+      "소각장",
+      "매립",
+      "SRF",
+      "MBT",
+      "바이오가스",
+      "하수처리",
+      "상수도",
+      "스마트미터",
+      "에코타운",
+      "자원순환"
     ],
-    "비철": [
-      "연",
-      "아연",
-      "니켈",
-      "안티모니",
-      "경영권 분쟁",
-      "MBK",
-      "영풍"
+    "SOC/민자": [
+      "BTO",
+      "BTL",
+      "PPP",
+      "PFI",
+      "컨세션",
+      "운영권 양수",
+      "MRG",
+      "수익공유",
+      "리파이낸싱"
     ],
-    "소매": [
-      "내수부진",
-      "시장지배력",
-      "SK텔레콤",
-      "SK매직",
-      "CLS",
-      "HMR",
-      "라이신",
-      "아미노산",
-      "슈완스컴퍼니",
-      "의류",
-      "신세계",
-      "대형마트 의무휴업",
-      "G마켓",
-      "W컨셉",
-      "스타필드"
+    "항공/공항/철도": [
+      "공항터미널",
+      "면세점 운영권",
+      "공항 민영화",
+      "슬롯",
+      "철도역세권 개발",
+      "리스백"
     ],
-    "석유화학": [
-      "석유화학",
-      "석화",
-      "유가",
-      "증설",
-      "스프레드",
-      "가동률",
-      "PX",
-      "벤젠",
-      "중국 증설",
-      "중동 COTC",
-      "LG에너지솔루션",
-      "전기차",
-      "배터리",
-      "리튬",
-      "IRA",
-      "AMPC",
-      "NCC"
+    "해외대체": [
+      "미국 데이터센터",
+      "유럽 항만",
+      "영국 오피스",
+      "호주 요금규제자산",
+      "유럽 재생에너지",
+      "브라질 송전",
+      "중동 수소",
+      "동남아 물류"
     ],
-    "건설": [
-      "철근 가격",
-      "시멘트 가격",
-      "공사비",
-      "SOC 예산",
-      "도시정비 지원",
-      "우발채무",
-      "수주",
-      "주간사",
-      "사고",
-      "시공능력순위",
-      "미분양",
-      "대손충당금"
-    ],
-    "특수채": [
-      "자본확충",
-      "HUG",
-      "전세사기",
-      "보증사고",
-      "보증료율",
-      "회수율",
-      "보증잔액",
-      "대위변제액",
-      "중소기업대출",
-      "대손충당금",
-      "부실채권",
-      "불법",
-      "구속",
-      "주택임대차보호법"
+    "연기금/LP": [
+      "국민연금 대체투자",
+      "사학연금 대체투자",
+      "공무원연금 대체투자",
+      "우정사업본부 대체투자",
+      "행복기금 대체투자",
+      "KIC 대체투자"
     ]
   },
   "favorite_to_industry_major": {
     "PE/VC": [
-      "은행 및 금융지주",
-      "보험사",
-      "카드사",
-      "캐피탈",
-      "지주사"
+      "PE/VC"
     ],
     "부동산/리츠": [
-      "은행 및 금융지주",
-      "보험사",
-      "지주사"
+      "부동산/리츠"
     ],
     "인프라/에너지": [
-      "에너지",
-      "발전",
-      "특수채"
+      "인프라/에너지"
     ],
     "데이터센터/통신": [
-      "지주사"
+      "데이터센터/통신"
     ],
     "물류/항만": [
-      "지주사"
+      "물류/항만"
     ],
     "환경/폐기물/수처리": [
-      "특수채"
+      "환경/폐기물/수처리"
     ],
     "SOC/민자": [
-      "특수채"
+      "SOC/민자"
     ],
     "항공/공항/철도": [
-      "지주사"
+      "항공/공항/철도"
     ],
     "해외대체": [
-      "지주사"
+      "해외대체"
     ],
     "연기금/LP": [
-      "은행 및 금융지주"
+      "연기금/LP"
     ]
   }
 }
